2006-10-12  Douglas Bates  <bates@stat.wisc.edu>

	* src/lmer.[ch],Wishart.[ch],lme4_utils.[ch]: Move utility
	functions from lmer.[ch] to make code structure cleaner.

2006-10-10  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION: Release 0.9975-3
	* src/lmer.c (Zt_carryOver): correct the calculation of nnz.

2006-09-27  Douglas Bates  <bates@R-project.org>

	* R/lmer.R (lmer): Moved argument checking and construction of
	model matrices, etc. to auxillary functions for use with functions
	to fit more general models.  Changed default method for GLMMs to
	Laplace and default for usePQL to FALSE.

2006-09-22  Douglas Bates  <bates@stat.wisc.edu>

	* src/lmer.c (mer_create and other functions and files): Change
	the status vector to an integer vector and just record the stage
	as 0 to 4.  Also record REML as an integer and glmm method as an
	integer instead of strings.

2006-09-22  Douglas Bates  <bates@stat.wisc.edu>

	* R/AllClass.R (and many other files): delete the useScale slot in
	an mer object and incorporate the scale in the devComp slot.  A
	negative value indicates a fixed scale.

2006-09-21  Douglas Bates  <bates@stat.wisc.edu>

	* R/AllClass.R: remove family and call slots from the mer object.
	Adjust mer_create (src/lmer.c) and associated files accordingly.

2006-09-11  Douglas Bates  <bates@R-project.org>

	* src/lme4_utils.[ch]: Move the alloc_d**Matrix functions from the
	Matrix package here.

2006-09-09  Douglas Bates  <bates@R-project.org>

	* R/lmer.R (expandSlash): Fix expansion of RHS when no fixed
	effects terms are specified.

2006-09-08  Douglas Bates  <bates@R-project.org>

	* DESCRIPTION (Imports): Remove imports of utils and latticeExtra

2006-09-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmer.R (printMer): S4 method for print() needed
	* NAMESPACE: and exported

2006-09-06  Douglas Bates  <bates@R-project.org>

	* src/cholmod.[ch]: Updates for CHOLMOD ver 1.2 installed in the
	Matrix package
